# thefunscreener

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter.yml  mypy.yml
app/: api.py
app/api/: api.py  api_server.py  api_service.py  auth.py
app/config/: config.py
app/database/: __init__.py  base_database.py  db_task_manager.py  postgres_database.py
app/models/: marketcap.py
app/utils/: helper.py  logging.py  scheduler.py
scripts/: query_mc.py
tests/: conftest.py  test_api_endpoints.py  test_company_service.py  test_db_manager.py  test_market_data_updater.py
