[project]
name = "thefunscreener"
version = "0.1.0"
description = "A FastAPI backend for screening stock companies by market cap"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "TheFunScreener Team"}
]
dependencies = [
    "fastapi>=0.100.0,<0.110.0",
    "uvicorn>=0.23.0,<0.30.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.2.3"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pytest>=7.0.0,<8.0.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "database"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["E402","F405","F403","E501","I001", "UP007", "UP035", "UP006", "B017", "PLR2004", "PLR0912", "PLR0915", "W291", "W293"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "psycopg2", "requests", "uvicorn"]
known-first-party = ["app", "database"] 

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_implicit_optional = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
warn_unreachable = true
show_error_codes = true
follow_imports = "normal"
disable_error_code = ["attr-defined", "index"]